Alignment is not correct on "Add Tag" button under "Active Campaign" lists in document editor

--- a/assets/css/rtl-admin.css
+++ b/assets/css/rtl-admin.css
@@ -1055,3 +1055,7 @@ span.deleteIcon{
     text-align: right!important;
     padding-left: 10px;
 }
+.inside.esigactiveinside p {
+    padding-left: 20px;
+    padding-top: 5px;
+}
